--- a/style.css
+++ b/style.css
@@ -154,20 +154,10 @@ button:hover {
      padding: 4rem;
      gap: 3rem;
 }
-criaCartao(
-    categoria,
-    pergunta,
-    resposta
-)
-
-criaCartao(
-    categoria,
-    pergunta,
-    resposta
-)
-
-criaCartao(
-    categoria,
-    pergunta,
-    resposta
-)
+#container {
+    display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     padding: 4rem;
+     gap: 3rem;
+}
